# sdp-exam-polito-rust-chat

./: .gitignore  Cargo.toml  MANUALE_PROGETTISTA.md  MANUALE_UTENTE.md  README.md
Client/: Cargo.toml  main.rs
Client/src/: args.rs  commands.rs  handshake.rs  main.rs  messages.rs  net.rs  terminal.rs  ui.rs
Documentation/: MANUALE_PROGETTISTA.md  MANUALE_UTENTE.md
Server/: Cargo.toml
Server/src/: args.rs  connection.rs  logger.rs  main.rs  server.rs  state.rs  util.rs  validation.rs
Server/src/commands/: create_group.rs  global_message.rs  invite.rs  join_group.rs  leave_group.rs  list_groups.rs  list_users.rs  logout.rs  mod.rs  ping.rs  register.rs  send_message.rs
common/: Cargo.toml
common/src/: lib.rs
