[package]
name = "ruggine-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
ruggine-common = { path = "../common" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures = "0.3"
ctrlc = "3"
crossterm = "0.27"
