[package]
name = "ruggine-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures = "0.3"
tower = "0.4"
anyhow = "1"
sysinfo = "0.30"
chrono = "0.4"
