[package]
name = "ruggine-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
ruggine-common = { path = "../common" }
anyhow = "1"
thiserror = "1"
sysinfo = "0.30"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "5"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ctrlc = "3"
